Added search button with hover, fixed input box sizing, created dropdown menus with hover for movies, comics and characters with buttons.  Placed both input and dropdown menu on same line. Deleted unnecessary code that I was not using. Commented out previous photo for now. Reframed previous cards for information output, added font style and styling to the website, and added a feature we could implement on the bottom of the page for search rendered.

--- a/style.css
+++ b/style.css
@@ -1,18 +1,55 @@
 @import url('https://fonts.googleapis.com/css2?family=Bangers&display=swap');
-* {
-    font-family: 'Bangers', cursive
+*  {
+    font-family: 'Bangers', cursive;
+    color: white;
  }
  
-.card-divider a:hover{
+.menu {
+    background-color: black;
+}
+
+.card-section, li, p{
+    background-color: black; 
+}
+
+form {
+    width: 340px;
+    height: 39px;
+}
+
+a:hover, li:hover {
+    background-color: #f0131e;
+}
+
+#searchButton .searchBar a .is-dropdown-submenu-parent .menu{
+    height: 39px;
+}
+
+#searchButton:hover{
+    background-color: #f0131e;
+}
+
+.grid-x.grid-margin-x.small-up-2.medium-up-3{
+padding-top: 15px;
+background-color: black;
+border: 30px solid white;
+}
+
+p {
+color: white;
+}
+
+h4 {
+text-align: center;
+}
+
+h4:hover, .pCards:hover{
     background: #f0131e;
 }
-.characterInfo {
-    background: black;
-    color: #ffffff;
+
+.input-group-field{
+    color: red;
 }
-.menu{
-    background-color: black;
-}
-li{
-    background-color: black;
+.test:hover{
+   background: #875094;
 }
