--- a/style.css
+++ b/style.css
@@ -1,14 +1,59 @@
-.jumbotron jumbotron-fluid {
-  background-image: url(Images/Universe.png);
+@import url('https://fonts.googleapis.com/css2?family=Bangers&display=swap');
+*  {
+    font-family: 'Bangers', cursive;
+    color: white;
+ }
+ 
+.menu {
+    background-color: black;
 }
 
-button,
-div,
-form,
-input {
-  margin: 10px;
+.card-section, li, p{
+    background-color: black; 
 }
 
-#characterInfo {
-  border: red solid 4px;
+form {
+    width: 340px;
+    height: 39px;
 }
+a{
+    color:white;
+}
+a:hover, li:hover {
+    background-color: #f0131e;
+}
+
+
+#searchButton .searchBar a .is-dropdown-submenu-parent .menu{
+    height: 39px;
+}
+
+#searchButton:hover{
+    background-color: #f0131e;
+}
+h4 {
+    font-family: 'Bangers', cursive;
+    color: yellow;
+    text-align: center;
+    }
+
+.grid-x.grid-margin-x.small-up-2.medium-up-3{
+padding-top: 15px;
+background-color: black;
+border: 30px solid white;
+}
+
+p {
+color: yellow;
+}
+
+h4:hover, .pCards:hover{
+    background: #f0131e;
+}
+
+/* .input-group-field{
+    color: red;
+} */
+/* .test:hover{
+   background: #875094;
+} */
