--- a/style.css
+++ b/style.css
@@ -57,3 +57,21 @@ h4:hover, .pCards:hover{
 /* .test:hover{
    background: #875094;
 } */
+
+.orbit-image, #headerImg {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+    border-right: 50px;
+    border-left: 50px;
+    border-color: black;
+}
+
+#headerImg{
+    background-color: black;
+}
+
+h1 {
+    color: black;
+}
