--- a/style.css
+++ b/style.css
@@ -1,77 +1,56 @@
-@import url('https://fonts.googleapis.com/css2?family=Bangers&display=swap');
-*  {
-    font-family: 'Bangers', cursive;
-    color: white;
- }
- 
+@import url("https://fonts.googleapis.com/css2?family=Bangers&display=swap");
+* {
+  font-family: "Bangers", cursive;
+  color: white;
+}
 .menu {
-    background-color: black;
+  background-color: black;
 }
-
-.card-section, li, p{
-    background-color: black; 
+.card-section,
+li,
+p {
+  background-color: black;
 }
-
 form {
-    width: 340px;
-    height: 39px;
+  width: 340px;
+  height: 39px;
 }
-a{
-    color:white;
+a {
+  color: white;
 }
-a:hover, li:hover {
-    background-color: #f0131e;
+a:hover,
+li:hover {
+  background-color: #f0131e;
 }
-
-
-#searchButton .searchBar a .is-dropdown-submenu-parent .menu{
-    height: 39px;
+#searchButton .searchBar a .is-dropdown-submenu-parent .menu {
+  height: 39px;
 }
-
-#searchButton:hover{
-    background-color: #f0131e;
+#searchButton:hover {
+  background-color: #f0131e;
 }
 h4 {
-    font-family: 'Bangers', cursive;
-    color: yellow;
-    text-align: center;
-    }
-
-.grid-x.grid-margin-x.small-up-2.medium-up-3{
-padding-top: 15px;
-background-color: black;
-border: 30px solid white;
+  font-family: "Bangers", cursive;
+  color: yellow;
+  text-align: center;
 }
-
+.grid-x.grid-margin-x.small-up-2.medium-up-3 {
+  padding-top: 15px;
+  background-color: black;
+  border: 30px solid white;
+}
 p {
-color: yellow;
+  color: yellow;
 }
-
-h4:hover, .pCards:hover{
-    background: #f0131e;
+.zoom:hover {
+  transform: scale(1.2);
 }
-
-/* .input-group-field{
-    color: red;
-} */
-/* .test:hover{
-   background: #875094;
-} */
-
-.orbit-image, #headerImg {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 50%;
-    border-right: 50px;
-    border-left: 50px;
-    border-color: black;
+.card-section:hover {
+  background: #f0131e;
+  /* This section is the hover for the cards already displayed */
 }
-
-#headerImg{
-    background-color: black;
+.card {
+  background: black;
 }
-
-h1 {
-    color: black;
+.card:hover {
+  background: #f0131e;
 }
