--- a/style.css
+++ b/style.css
@@ -3,30 +3,14 @@
   font-family: "Bangers", cursive;
   color: white;
 }
-
-.orbit {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  bottom: 10px;
-  width: 50%;
-}
-
-.orbit-image {
-  height: 400px;
-  width: 600px;
-}
-
 .menu {
   background-color: black;
 }
-
 .card-section,
 li,
 p {
   background-color: black;
 }
-
 form {
   width: 340px;
   height: 39px;
@@ -38,11 +22,9 @@ a:hover,
 li:hover {
   background-color: #f0131e;
 }
-
 #searchButton .searchBar a .is-dropdown-submenu-parent .menu {
   height: 39px;
 }
-
 #searchButton:hover {
   background-color: #f0131e;
 }
@@ -51,35 +33,63 @@ h4 {
   color: yellow;
   text-align: center;
 }
-
 .grid-x.grid-margin-x.small-up-2.medium-up-3 {
   padding-top: 15px;
   background-color: black;
   border: 30px solid white;
 }
-
 p {
   color: yellow;
 }
-
 .zoom:hover {
   transform: scale(1.2);
 }
-
 .card-section:hover {
   background: #f0131e;
   /* This section is the hover for the cards already displayed */
 }
-
 .card {
   background: black;
 }
-
 .card:hover {
   background: #f0131e;
 }
 
-.container1{
-  display: block;
+#doodle {
+  color: red;
+}
 
+#doodle,
+p {
+  color: white;
+}
+
+/* modal stuff  */
+
+.modalContainer {
+    background-color: black;
+}
+
+#modalHeroImage {
+    max-width: 300px;
+    float: left;
+    margin: 9px;
+}
+
+.modalPics {
+    max-width: 200px;
+    display: inline;
+}
+
+.modalP{
+    color: red;
+}
+
+.orbit {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  /* bottom: 10px; */
+  width: 50%;
+  height: 400px;
 }
