Commented out a part of styling I added to see if I need this after adding the background colors.

--- a/style.css
+++ b/style.css
@@ -11,8 +11,8 @@
 .nav-container{
     display: flex;
     flex-direction: row;
-    border-top: solid white;
-    border-bottom: solid white;
+    /* border-top: solid black;
+    border-bottom: solid black; */
 }
 
 .nav-right{
