Deleted header image id in html because I am noticing a loading issue and changed colors of lightening bolt and search button.

--- a/style.css
+++ b/style.css
@@ -48,9 +48,14 @@ li:hover {
 #searchButton .searchBar a .is-dropdown-submenu-parent .menu {
   height: 39px;
 }
-#searchButton:hover {
-  background-color: #f0131e;
+#searchButton{
+  background-color: black;;
 }
+
+.fa-bolt{
+    color: yellow;
+}
+
 h4 {
   font-family: "Bangers", cursive;
   color: yellow;
