--- a/style.css
+++ b/style.css
@@ -3,6 +3,10 @@
   font-family: "Bangers", cursive;
   color: white;
 }
+body{
+    background: rgb(0,0,0);
+background: linear-gradient(90deg, rgba(0,0,0,1) 0%, rgba(240,19,30,1) 35%, rgba(0,0,0,1) 100%);
+}
 
 #headerImage{
     margin-top: -25px;
@@ -64,7 +68,7 @@ h4 {
 .grid-x.grid-margin-x.small-up-2.medium-up-3 {
   padding-top: 15px;
   background-color: black;
-  border: 30px solid white;
+  border: 30px solid #f0131e;
 }
 p {
   color: yellow;
