--- a/style.css
+++ b/style.css
@@ -4,8 +4,8 @@
   color: white;
 }
 body{
-    background: rgb(0,0,0);
-background: linear-gradient(90deg, rgba(0,0,0,1) 0%, rgba(240,19,30,1) 35%, rgba(0,0,0,1) 100%);
+    background: rgb(240,19,30);
+    background: radial-gradient(circle, rgba(240,19,30,1) 0%, rgba(0,0,0,1) 50%, rgba(240,19,30,1) 100%);
 }
 
 #headerImage{
@@ -15,8 +15,8 @@ background: linear-gradient(90deg, rgba(0,0,0,1) 0%, rgba(240,19,30,1) 35%, rgba
 .nav-container{
     display: flex;
     flex-direction: row;
-    /* border-top: solid black;
-    border-bottom: solid black; */
+    border-top: solid black;
+    border-bottom: solid black;
 }
 
 .nav-right{
@@ -57,9 +57,8 @@ li:hover {
 }
 
 .fa-bolt{
-    color: yellow;
+color: #f0131e;
 }
-
 h4 {
   font-family: "Bangers", cursive;
   color: yellow;
@@ -68,7 +67,7 @@ h4 {
 .grid-x.grid-margin-x.small-up-2.medium-up-3 {
   padding-top: 15px;
   background-color: black;
-  border: 30px solid #f0131e;
+  border: 30px solid black;
 }
 p {
   color: yellow;
