--- a/style.css
+++ b/style.css
@@ -1,97 +1,111 @@
-@import url('https://fonts.googleapis.com/css2?family=Bangers&display=swap');
-*  {
-    font-family: 'Bangers', cursive;
-    color: white;
- }
-
- .nav-container{
+@import url("https://fonts.googleapis.com/css2?family=Bangers&display=swap");
+* {
+  font-family: "Bangers", cursive;
+  color: white;
+}
+body{
+    background: rgb(240,19,30);
+    background: radial-gradient(circle, rgba(240,19,30,1) 0%, rgba(0,0,0,1) 50%, rgba(240,19,30,1) 100%);
+}
+#headerImage{
+    margin-top: -25px;
+}
+.nav-container{
     display: flex;
     flex-direction: row;
     border-top: solid black;
     border-bottom: solid black;
+    position: relative;
 }
+
 .nav-right{
     display: flex;
     justify-content: flex-end;
-    width: 77%;
+    width: 50%;
     background-color: black;
 }
-.nav-left{
-    width: 23%;
-}
-body{
-    background-color: rgb(80, 77, 77);
-    /* background-image: url("Images/Universe.png"); */
-    /* background-size: cover;    */
-    /* this lead to working with one image but expands the page. */
-    background-repeat: no-repeat;
-    /* object-fit: cover; */
-    /* background-repeat: unset; */
-    background-repeat: round;
-    width: 100%;
-    
-}
- 
 .menu {
     background-color: black;
-}
-
-form {
-    width: 340px;
+  }
+  .card-section,
+  li,
+  p {
+    background-color: black;
+  }
+  form {
+    width: 1070px;
     height: 39px;
-}
-a{
-    color:white;
-}
-a:hover, li:hover {
+  }
+  a {color: white;
+  }
+  a:hover,
+  li:hover {
     background-color: #f0131e;
-    
-}
-
-.input-group-field{
-    color: #008000;
-}
-
-#searchButton .searchBar a .is-dropdown-submenu-parent .menu{
+  }
+  #searchButton .searchBar a .is-dropdown-submenu-parent .menu {
     height: 39px;
-}
-
-#searchButton{
+  }
+  .searchBar {
+      z-index: 10;
+      position: absolute;
+      bottom: 430px;
+      left: 504px;
+  }
+  
+  #searchButton{
+    background-color: black;;
+  }
+  .fa-bolt{
     color: yellow;
-    background-color: rgb(103, 52, 170) !important;
-}
-#searchButton:hover{
-    background-color: yellow;
-}
-h4 {
-    font-family: 'Bangers', cursive;
-    color: yellow;
-    text-align: center;
     }
 
-.grid-x.grid-margin-x.small-up-2.medium-up-3{
-padding-top: 12px;
-background-color: rgb(103, 52, 170);
-border: 30px solid black;
-}
+    h4 {
+      font-family: "Bangers", cursive;
+      color: yellow;
+      text-align: center;
+    }
+    .grid-x.grid-margin-x.small-up-2.medium-up-3 {
+      padding-top: 15px;
+      background-color: black;
+      border: 30px solid black;
+    }
+    p {
+      color: yellow;
+    }
+    .zoom:hover {
+      transform: scale(1.2);
+    }
+    .card-section:hover {
+      background: #f0131e;
+      /* This section is the hover for the cards already displayed */
+    }
+    .card {
+      background: black;
+    }
+    .card:hover {
+      background: #f0131e;
+    }
+    #doodle {
+      color: red;
+    }
+    #doodle,
+    p {
+      color: white;
+    }
 
-p {
-color:yellow;
+/* modal stuff  */
+.modalContainer {
+    background-color: black;
 }
-
-.zoom:hover{
-    transform: scale(1.2); 
+#modalHeroImage {
+    max-width: 300px;
+    float: left;
+    margin: 9px;
 }
-
-.card-section:hover {
-    background: #f0131e;
-    /* This section is the hover for the cards already displayed */
+.modalPics {
+    max-width: 200px;
+    display: inline;
 }
-
-.card {
-    background: black;
-}
-
-.card:hover{
-    background: #f0131e;
+.modalP{
+    color: red;
 }
